[package]
name = "huhnitor"
version = "1.0.0"
authors = ["James M <james@jamz.dev>"]
description = "Intergalactic serial monitor"
readme = "README.md"
documentation = "https://github.com/SpacehuhnTech/Huhnitor"
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = [ "full" ] }
tokio-util = { version = "0.3.1", features = [ "codec" ] }
tokio-serial = "4.3.3"

serialport = "3.3.0"
futures = "0.3.5"
bytes = "0.5.4"
